Simplify security setup with application-based user and dynamic CORS
- Removed UserConfig and in-memory user declaration
- Spring Security now relies on application.properties:
  - spring.security.user.name=admin
  - spring.security.user.password=motdepasse
- CORS allowed origins are now configurable via:
  - app.cors.allowed-origins=http://localhost:4200,https://monapp.vercel.app
- Updated SecurityConfig to read allowed origins from property
- Prepared for Heroku + Vercel deployment